(1) feed in browser; (2) bold in 'read more'; (3) objectives list align correction

--- a/web/css/frontend.css
+++ b/web/css/frontend.css
@@ -316,7 +316,7 @@ h3 {
 }
 
 ._ul_base > li {
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .team_key_item {
